--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+    <main>
     <div class="header-hero"> 
         <header>
             <div class="header-logo">Header Logo</div>
@@ -36,11 +38,32 @@
     <section class="icons">
         <h2>Some Random Information</h1>
         <div class="boxes">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <figure>
+                <div class="box"></div>
+                <figcaption>this is some subtext under an illustration or image</figcaption>
+            </figure>
+            <figure>
+                <div class="box"></div>
+                <figcaption>this is some subtext under an illustration or image</figcaption>
+            </figure>
+            <figure>
+                <div class="box"></div>
+                <figcaption>this is some subtext under an illustration or image</figcaption>
+            </figure>    
+            <figure>
+                <div class="box"></div>
+                <figcaption>this is some subtext under an illustration or image</figcaption>
+            </figure>
         </div>
     </section>
+    <section class="quote">
+        <div class="quote-container">
+            <blockquote>
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually be able to read it. Who knows? All I know is that it looks nice.
+            </blockquote>
+            <p class="quote-by-thor">-Thor, God of Thunder</p>
+        </div>
+    </section>
+</main>
 </body>
 </html>
