--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
             <p class="quote-by-thor">-Thor, God of Thunder</p>
         </div>
     </section>
+    <section class="CTA">
+        <div class="CTA-Box">
+            <div class="text">
+                <h3>Call to Action! It's Time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign Up</button>
+        </div>
+    </section>
 </main>
+<footer>
+    Copyright © The Odin Project 2022
+</footer>
 </body>
 </html>
